[gd_scene load_steps=36 format=3 uid="uid://c8swocmpm3gl5"]

[ext_resource type="PackedScene" uid="uid://cojgne2mgqepd" path="res://scenes/player/player.tscn" id="1_8hega"]
[ext_resource type="Script" uid="uid://b6viu7q5cjl1f" path="res://scenes/base_level/base_level.gd" id="1_k2up0"]
[ext_resource type="Texture2D" uid="uid://b4vhfvmr6fx5x" path="res://scenes/base_level/res_level_3_bg_gradient.tres" id="3_5yg0m"]
[ext_resource type="Texture2D" uid="uid://elhm8hhwq2pi" path="res://assets/textures/cloud_circles.png" id="3_8eac3"]
[ext_resource type="PackedScene" uid="uid://blhyxtuel2aqx" path="res://scenes/managers/arena_time_manager.tscn" id="3_c2ddb"]
[ext_resource type="PackedScene" uid="uid://pyao5qbxpx8l" path="res://scenes/managers/item_drop_manager.tscn" id="3_dojjm"]
[ext_resource type="AudioStream" uid="uid://bw0oxxyia6y8w" path="res://assets/audio/bgm/meowblaster_theme_level_5B.mp3" id="3_g525y"]
[ext_resource type="PackedScene" uid="uid://bw7votl21cark" path="res://scenes/enemy/enemy.tscn" id="3_jlp5g"]
[ext_resource type="Script" uid="uid://df24bvw55uwn1" path="res://resources/items/res_droppable_item.gd" id="4_8tryd"]
[ext_resource type="Texture2D" uid="uid://cr40kg8av6puu" path="res://scenes/base_level/res_level_1_bg_gradient.tres" id="4_jnmbr"]
[ext_resource type="Resource" uid="uid://c223l7gta8v5g" path="res://resources/items/item_health_up.tres" id="5_0rn38"]
[ext_resource type="Resource" uid="uid://csb43hrg77037" path="res://resources/items/item_shooting_speed_up.tres" id="6_0rn38"]
[ext_resource type="PackedScene" uid="uid://0d7fsdntcf5u" path="res://scenes/ui/ui.tscn" id="6_8o1ni"]
[ext_resource type="Resource" uid="uid://e535cmmuyqbf" path="res://resources/items/item_move_speed_up.tres" id="9_5uif2"]
[ext_resource type="Texture2D" uid="uid://dnqf8ln7fiv8x" path="res://assets/textures/star_wave_pattern.png" id="12_c2ddb"]

[sub_resource type="Animation" id="Animation_dojjm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudsGPUParticles2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudsGPUParticles2D:process_material:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.553273, 0.60896, 0.685211, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudsGPUParticles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 408.47)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BGBlueSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%WavePattern:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.29, 0.5385, 1, 0.490196)]
}

[sub_resource type="Animation" id="Animation_jnmbr"]
resource_name = "level_1_to_level_2"
length = 2.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudsGPUParticles2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.804027, 0.7568, 0.88, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudsGPUParticles2D:process_material:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.553273, 0.60896, 0.685211, 1), Color(0.907752, 0.781919, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudsGPUParticles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 404), Vector2(320, 414)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BGBlueSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.643137)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("%WavePattern:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.29, 0.5385, 1, 0.490196), Color(0.675, 0.5, 1, 0.392157)]
}

[sub_resource type="Animation" id="Animation_a8gkr"]
resource_name = "level_2_to_level_3"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudsGPUParticles2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.804027, 0.7568, 0.88, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudsGPUParticles2D:process_material:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.907752, 0.781919, 1, 1), Color(0.99989, 0.733597, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudsGPUParticles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 414), Vector2(320, 425)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BGPinkSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BGBlueSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.643137), Color(1, 1, 1, 0.376471)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%WavePattern:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.675, 0.5, 1, 0.392157), Color(0.676166, 0.33, 1, 0.698039)]
}

[sub_resource type="Animation" id="Animation_g525y"]
resource_name = "level_1_start"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudsGPUParticles2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudsGPUParticles2D:process_material:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.553273, 0.60896, 0.685211, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudsGPUParticles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 408.47)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%WavePattern:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.29, 0.5385, 1, 0.490196)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BGBlueSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4cbhi"]
resource_name = "level_3_to_level_4"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudsGPUParticles2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudsGPUParticles2D:process_material:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.99989, 0.733597, 1, 1), Color(0.963, 0.63, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudsGPUParticles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 425), Vector2(320, 430.22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BGPinkSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BGBlueSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.376471), Color(1, 1, 1, 0.262745)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%WavePattern:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.676166, 0.33, 1, 0.698039), Color(0.637333, 0.36, 1, 0.623529)]
}

[sub_resource type="Animation" id="Animation_5uif2"]
resource_name = "level_4_to_level_5"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudsGPUParticles2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudsGPUParticles2D:process_material:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.963, 0.63, 1, 1), Color(0.963, 0.63, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudsGPUParticles2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 430.22), Vector2(320, 430.22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BGPinkSprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BGBlueSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.262745), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("%WavePattern:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.637333, 0.36, 1, 0.623529), Color(0.745, 0.55, 1, 0.305882)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a8gkr"]
_data = {
&"RESET": SubResource("Animation_dojjm"),
&"level_1_start": SubResource("Animation_g525y"),
&"level_1_to_level_2": SubResource("Animation_jnmbr"),
&"level_2_to_level_3": SubResource("Animation_a8gkr"),
&"level_3_to_level_4": SubResource("Animation_4cbhi"),
&"level_4_to_level_5": SubResource("Animation_5uif2")
}

[sub_resource type="Gradient" id="Gradient_c2ddb"]
offsets = PackedFloat32Array(0, 0.105769, 0.801282, 1)
colors = PackedColorArray(1, 0.486275, 0.827451, 1, 0.6975, 0.3, 0.75, 1, 0.309804, 0, 0.580392, 1, 0.14889, 0.000294777, 0.299999, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g525y"]
gradient = SubResource("Gradient_c2ddb")
width = 640
height = 360
fill_to = Vector2(0, 1)

[sub_resource type="Animation" id="Animation_8diyn"]
resource_name = "level_1"
length = 10.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WavePattern:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 69)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WavePattern/Top:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WavePattern/Bottom:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qhw0v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WavePattern:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WavePattern/Top:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WavePattern/Bottom:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_inqle"]
_data = {
&"RESET": SubResource("Animation_qhw0v"),
&"level_1": SubResource("Animation_8diyn")
}

[sub_resource type="Curve" id="Curve_v60iv"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.130742, 1), 0.0, 0.0, 0, 0, Vector2(0.924028, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_5yg0m"]
curve = SubResource("Curve_v60iv")

[sub_resource type="Curve" id="Curve_8eac3"]
_limits = [-5.0, 5.0, 0.0, 1.0]
_data = [Vector2(0, 5), 0.0, 0.0, 0, 0, Vector2(0.770318, -5), 0.0, 0.0, 0, 0, Vector2(1, 5), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_0wob2"]
curve_y = SubResource("Curve_8eac3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a8gkr"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(400, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 0, 1)
directional_velocity_min = -5.00002
directional_velocity_max = 2.49998
directional_velocity_curve = SubResource("CurveXYZTexture_0wob2")
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_max = 0.6
color = Color(0.553273, 0.60896, 0.685211, 1)
alpha_curve = SubResource("CurveTexture_5yg0m")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlp5g"]
size = Vector2(190, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8eac3"]
size = Vector2(400, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wob2"]
size = Vector2(698, 40)

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_k2up0")
enemy_scene = ExtResource("3_jlp5g")
enemy_spawn_timer_min_wait = 1.0
enemy_spawn_timer_max_wait = 2.25

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g525y")
autoplay = true
bus = &"BGM"

[node name="ArenaTimeManager" parent="." instance=ExtResource("3_c2ddb")]

[node name="ItemDropManager" parent="." instance=ExtResource("3_dojjm")]
unique_name_in_owner = true
drop_percent = 0.1
droppable_items = Array[ExtResource("4_8tryd")]([ExtResource("5_0rn38"), ExtResource("6_0rn38"), ExtResource("9_5uif2")])

[node name="BG" type="Node2D" parent="."]

[node name="LevelTransitionPlayer" type="AnimationPlayer" parent="BG"]
libraries = {
&"": SubResource("AnimationLibrary_a8gkr")
}
autoplay = "level_1_start"

[node name="BGPinkSprite2D2" type="Sprite2D" parent="BG"]
visible = false
texture = SubResource("GradientTexture2D_g525y")
centered = false

[node name="BGPinkSprite2D" type="Sprite2D" parent="BG"]
texture = ExtResource("4_jnmbr")
centered = false

[node name="BGBlueSprite2D" type="Sprite2D" parent="BG"]
texture = ExtResource("3_5yg0m")
centered = false

[node name="Comet" type="Node2D" parent="BG"]

[node name="BGPatterns" type="Node2D" parent="BG"]

[node name="PatternAnimationPlayer" type="AnimationPlayer" parent="BG/BGPatterns"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_inqle")
}
autoplay = "level_1"

[node name="WavePattern" type="Node2D" parent="BG/BGPatterns"]
unique_name_in_owner = true
modulate = Color(0.29, 0.5385, 1, 0.490196)

[node name="Top" type="Sprite2D" parent="BG/BGPatterns/WavePattern"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
position = Vector2(320, -37)
scale = Vector2(0.293, 0.293)
texture = ExtResource("12_c2ddb")

[node name="Middle1" type="Sprite2D" parent="BG/BGPatterns/WavePattern"]
unique_name_in_owner = true
position = Vector2(320, 32)
scale = Vector2(0.293, 0.293)
texture = ExtResource("12_c2ddb")

[node name="Middle2" type="Sprite2D" parent="BG/BGPatterns/WavePattern"]
unique_name_in_owner = true
position = Vector2(320, 101)
scale = Vector2(0.293, 0.293)
texture = ExtResource("12_c2ddb")

[node name="Middle3" type="Sprite2D" parent="BG/BGPatterns/WavePattern"]
unique_name_in_owner = true
position = Vector2(320, 170)
scale = Vector2(0.293, 0.293)
texture = ExtResource("12_c2ddb")

[node name="Bottom" type="Sprite2D" parent="BG/BGPatterns/WavePattern"]
unique_name_in_owner = true
position = Vector2(320, 239)
scale = Vector2(0.293, 0.293)
texture = ExtResource("12_c2ddb")

[node name="CloudsGPUParticles2D" type="GPUParticles2D" parent="BG"]
position = Vector2(320, 408.47)
amount = 48
texture = ExtResource("3_8eac3")
lifetime = 5.0
preprocess = 2.5
process_material = SubResource("ParticleProcessMaterial_a8gkr")

[node name="EnemySpawnerTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true
autostart = true

[node name="EnemySpawnerTimer2" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="EnemySpawnerTimer3" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="MovementBounds" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="LeftColorRect" type="ColorRect" parent="MovementBounds"]
visible = false
offset_top = -19.0
offset_right = 170.0
offset_bottom = 418.0
color = Color(0, 0, 0, 0.376471)

[node name="RightColorRect" type="ColorRect" parent="MovementBounds"]
visible = false
offset_left = 470.0
offset_top = -19.0
offset_right = 640.0
offset_bottom = 418.0
color = Color(0, 0, 0, 0.376471)

[node name="LeftCollisionShape2D" type="CollisionShape2D" parent="MovementBounds"]
visible = false
position = Vector2(75, 180)
shape = SubResource("RectangleShape2D_jlp5g")

[node name="RightCollisionShape2D" type="CollisionShape2D" parent="MovementBounds"]
visible = false
position = Vector2(565, 180)
shape = SubResource("RectangleShape2D_jlp5g")

[node name="EntitiesLayer" type="Node2D" parent="." groups=["entities_layer"]]
unique_name_in_owner = true

[node name="Player" parent="EntitiesLayer" instance=ExtResource("1_8hega")]
unique_name_in_owner = true
position = Vector2(320, 331)

[node name="HurtBox" type="Area2D" parent="." groups=["level_enemy_bounds"]]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(320, 420)
shape = SubResource("RectangleShape2D_8eac3")
debug_color = Color(0.987971, 0, 0.307194, 0.42)

[node name="ProjectileBounds" type="Area2D" parent="." groups=["level_projectile_bounds"]]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileBounds"]
position = Vector2(320, 4)
shape = SubResource("RectangleShape2D_0wob2")
debug_color = Color(0.92705, 0.269834, 7.70092e-07, 0.42)

[node name="UI" parent="." instance=ExtResource("6_8o1ni")]
